# ok

./: BUILD  MODULE.bazel  go.mod  go.sum  install.sh
.github/workflows/: release-cli.yaml
cli/: BUILD
cli/arg/: BUILD  arg.go
cli/bazelisk/: BUILD  bazelisk.go
cli/claude/: BUILD  claude.go
cli/cmd/ok/: BUILD  ok.go
cli/command/: BUILD  command.go
cli/command/register/: BUILD  register.go
cli/help/: BUILD  help.go
cli/log/: BUILD  log.go
cli/picker/: BUILD  picker.go
cli/please/: BUILD  please.go
cli/shortcuts/: BUILD  shortcuts.go
cli/textarea/: BUILD  textarea.go
cli/version/: BUILD  version.go
